--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "chart.js": "^4.4.7",
     "framer-motion": "^12.0.3",
     "lucide-react": "^0.474.0",
-    "next": "15.1.6",
+    "next": "^16.1.2",
     "next-auth": "^4.24.13",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
